--- a/style.css
+++ b/style.css
@@ -42,7 +42,8 @@ body {
   row-gap: 15px;
   margin: 20px 0;
   padding-bottom: 20px;
-  font-size: 20px;
+  font-size: 16px;
+  font-weight: 400;
   border-bottom: 1px solid gray;
 }
 
@@ -71,9 +72,9 @@ input[type='checkbox'] {
   width: fit-content;
   font-family: inherit;
   font-size: 20px;
-  font-weight: 200;
+  font-weight: 400;
   color: white;
-  background: #4adf86;
+  background: #10b981;
   text-shadow: 0 0 4px black;
   padding: 6px 20px;
   border: none;
